<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginBottom="16dp"
        android:hint="@string/ChangePasswordDialogCurrent_password"
        android:id="@+id/dialog_change_password_currentPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginBottom="16dp"
        android:hint="@string/ChangePasswordDialogNew_password"
        android:id="@+id/dialog_change_password_newPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginBottom="16dp"
        android:hint="@string/ChangePasswordDialogConfirm_new_password"
        android:id="@+id/dialog_change_password_confirmNewPassword"/>

</LinearLayout>